# bankslipanalyzer

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  fly.toml  pyproject.toml  read_toml.py  ruff.toml
.github/: pull_request_template.md
.github/workflows/: bankslipanalyzer.yml  ci.yml  deploy-check-version.yml  deploy-fly.yml  python-linting.yml  python-testing.yml
app/: __main__.py  main.py  settings.py
app/api/: router.py
app/api/helpers/: app_exceptions.py  calculators.py  handler.py  mapper.py  request_exceptions.py  validators.py
app/api/routers/: bank_slip.py  bank_slip_return.py  bank_slip_shipping.py  health.py
app/api/schemas/: bank_slip.py  bank_slip_return.py  nexxera_document.py  shipping.py
app/services/: barcode.py  digitable_line.py  shipping.py
app/services/abstract/: nexxera.py
bank_return/app/api/: router.py
bank_return/app/api/routers/: bank_slip_return.py
bank_return/app/services/: bank_return.py
bank_shipping/app/api/: router.py
bank_shipping/app/api/routers/: bank_slip_shipping.py
bank_shipping/app/services/: shipping.py
bank_slip/app/api/: router.py
bank_slip/app/api/routers/: bank_slip.py
bank_slip/app/services/: barcode.py  digitable_line.py
