[tool.poetry]
authors = ["Pedro Sousa <36779714+SousaPedro11@users.noreply.github.com>"]
description = ""
name = "bankslipanalyzer"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.115.0"
pendulum = "^3.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python = "^3.12"
python-decouple = "^3.8"
python-multipart = "^0.0.10"
sentry-sdk = "^2.14.0"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
toml = "^0.10.2"
yesqa = "^1.5.0"

[tool.black]
line-length = 120

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing:skip-covered --cov-fail-under 80 --cov-config .coveragerc"
python_files = "*tests.py *test_*.py *_tests.py"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
